--- a/HotelAdministradorFrontend/package.json
+++ b/HotelAdministradorFrontend/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+	"lint": "ng lint",
+    "e2e": "ng e2e",
+    "start:server": "ng serve --proxy-config proxy.conf.js",
+    "start:api": "nodemon server/server.js"
   },
   "private": true,
   "dependencies": {
