--- a/HotelBackEnd/UPCBussines/UPC.APIBusiness/UPC.APIBusiness.API/UPC.APIBusiness.API.csproj
+++ b/HotelBackEnd/UPCBussines/UPC.APIBusiness/UPC.APIBusiness.API/UPC.APIBusiness.API.csproj
@@ -40,4 +40,8 @@
     <Folder Include="XML\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
